--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>lateNightJavaProductions</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
   </head>
   <body>
     <header id="nav-header">
@@ -59,7 +60,7 @@
       <section id="music">
         <h1>Music</h1>
         <p>
-          I specialize in drum set, latin & world percussion, concert percussion instruments.
+          I specialize in drum set, latin/world percussion, and concert percussion.
           I also compose music when I am not wrapped up in practicing.
 
           Portfolio will be up soon!
@@ -70,5 +71,6 @@
         <h1>Contact</h1>
       </section>
     </main>
+
   </body>
 </html>
