Add checkpoint before creating branch for home section

--- a/index.html
+++ b/index.html
@@ -4,32 +4,37 @@
     <meta charset="utf-8">
     <title>lateNightJavaProductions</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <script type="text/javascript" src="./lib/canvas.js"></script>
   </head>
   <body>
     <header id="nav-header">
-      <div id="left-nav">
-        <h1>lateNightJavaProductions</h1>
+      <div id="nav-left">
+        <h1>lateNightProductions</h1>
       </div>
-      <div id="right-nav">
-        <ul>
+      <div id="nav-right">
+        <ul id="nav-right-ul">
           <li>Home</li>
           <li>About</li>
-          <li>Tech Projects</li>
-          <li>Music Projects</li>
+          <li>Portfolio</li>
+          <li>Music</li>
           <li>Contact</li>
         </ul>
       </div>
     </header>
 
     <main id="main">
-      <section id="home">
+
+      <canvas id="canvas"></canvas>
+      <!-- <section id="home">
         <h1>Mark Martinez</h1>
         <h2>Software Developer/Musician</h2>
         <p>
           Laying down phat algoRHYTHMic beats.
           Pencil to paper code as DRY as my trashcan lid cymbal.
         </p>
-      </section>
+      </section> -->
 
       <section id="about">
         <h1>About</h1>
@@ -37,7 +42,7 @@
           Software developer experienced building responsive full stack
           single page applications using Javascript, React, Redux, jQuery,
           Ruby, Rails, PostgreSQL, HTML5 & CSS3.
-
+          <br><br>
           After having a succesful career as a contracted musician and private
           instructor, I decided I needed a change.  I packed my bags and moved
           to NYC to pursue a career in software development.
