--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
     <main id="main">
 
-      <canvas id="canvas"></canvas>
+      <section id="home">
+        <canvas id="canvas"></canvas>
+      </section>
       <!-- <section id="home">
         <h1>Mark Martinez</h1>
         <h2>Software Developer/Musician</h2>
@@ -36,7 +38,7 @@
         </p>
       </section> -->
 
-      <section id="about">
+      <!-- <section id="about">
         <h1>About</h1>
         <p id="bio">
           Software developer experienced building responsive full stack
@@ -51,9 +53,9 @@
         <p id="about-quote">
           "Life sucks, you suck, deal with it."
         </p>
-      </section>
+      </section> -->
 
-      <section id="portfolio">
+      <!-- <section id="portfolio">
         <h1>Portfolio</h1>
         <ul>
           <li>MANO!MIDINERO?</li>
@@ -70,11 +72,11 @@
 
           Portfolio will be up soon!
         </p>
-      </section>
+      </section> -->
 
-      <section id="contact">
+      <!-- <section id="contact">
         <h1>Contact</h1>
-      </section>
+      </section> -->
     </main>
 
   </body>
