Site under construction checkpoint

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="./lib/canvas.js"></script>
   </head>
   <body>
@@ -13,6 +14,15 @@
     <main id="main">
       <section id="home">
         <canvas id="canvas"></canvas>
+        <div id="name">
+          <h1>Mark Martinez</h1>
+          <h2>Software Developer && Musician</h2>
+          <h3>Site under construction. Come back soon!</h3>
+          <nav id="temp-links">
+            <a href="https://github.com/mm31415"><i class="fa fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/mark-martinez-62975b124/"><i class="fa fa-linkedin-square"></i></a>
+          </nav>
+        </div>
       </section>
     </main>
 
