--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="./lib/canvas.js"></script>
+    <script type="text/javascript" src="./lib/app.js"></script>
   </head>
   <body>
 
@@ -17,13 +17,61 @@
         <div id="name">
           <h1>Mark Martinez</h1>
           <h2>Software Developer && Musician</h2>
-          <h3>Site under construction. Come back soon!</h3>
-          <nav id="temp-links">
-            <a href="https://github.com/mm31415"><i class="fa fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/mark-martinez-62975b124/"><i class="fa fa-linkedin-square"></i></a>
-          </nav>
+          <a href="#about">Check it.</a>
         </div>
       </section>
+      <!-- <section id="home">
+        <h1>Mark Martinez</h1>
+        <h2>Software Developer/Musician</h2>
+        <p>
+          Laying down phat algoRHYTHMic beats.
+          Pencil to paper code as DRY as my trashcan lid cymbal.
+        </p>
+      </section> -->
+
+      <section id="about">
+        <h1>About</h1>
+        <p id="bio">
+          Software developer experienced building responsive full stack
+          single page applications using Javascript, React, Redux, jQuery,
+          Ruby, Rails, PostgreSQL, HTML5 & CSS3.
+          <br><br>
+          After having a succesful career as a contracted musician and private
+          instructor, I decided I needed a change.  I packed my bags and moved
+          to NYC to pursue a career in software development.
+        </p>
+
+        <p id="about-quote">
+          "Life sucks, you suck, deal with it."
+        </p>
+      </section>
+
+      <!-- <section id="portfolio">
+        <h1>Portfolio</h1>
+        <ul>
+          <li>MANO!MIDINERO?</li>
+          <li>drummin'</li>
+          <li>tomaTodo</li>
+        </ul>
+      </section>
+
+      <section id="music">
+        <h1>Music</h1>
+        <p>
+          I specialize in drum set, latin/world percussion, and concert percussion.
+          I also compose music when I am not wrapped up in practicing.
+
+          Portfolio will be up soon!
+        </p>
+      </section> -->
+
+      <!-- <section id="contact">
+        <h1>Contact</h1>
+        <nav id="temp-links">
+          <a href="https://github.com/mm31415"><i class="fa fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/mark-martinez-62975b124/"><i class="fa fa-linkedin-square"></i></a>
+        </nav>
+      </section> -->
     </main>
 
   </body>
