Adding styling to home and contact section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>lateNightJavaProductions</title>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/about.css">
+    <link rel="stylesheet" href="./assets/css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="./lib/canvas.js"></script>
     <script type="text/javascript" src="./lib/app.js"></script>
@@ -31,7 +35,7 @@
       </section> -->
 
       <section id="about">
-        <h1>About</h1>
+        <h1>| About |</h1>
         <p id="bio">
           Software developer experienced building responsive full stack
           single page applications using Javascript, React, Redux, jQuery,
@@ -66,13 +70,17 @@
         </p>
       </section> -->
 
-      <!-- <section id="contact">
-        <h1>Contact</h1>
-        <nav id="temp-links">
+      <section id="contact">
+        <h1>| Contact |</h1>
+        <p id="contact-info">
+          <h3>Email: martinez.m31415@gmail.com</h3>
+          <h3>Phone: (210)387-1744</h3>
+        </p>
+        <nav id="contact-links">
           <a href="https://github.com/mm31415"><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/mark-martinez-62975b124/"><i class="fa fa-linkedin-square"></i></a>
         </nav>
-      </section> -->
+      </section>
     </main>
 
   </body>
