Work on about, header, and contact sections

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>lateNightJavaProductions</title>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/home.css">
     <link rel="stylesheet" href="./assets/css/about.css">
     <link rel="stylesheet" href="./assets/css/contact.css">
@@ -25,14 +25,19 @@
           <a href="#about">Check it.</a>
         </div>
       </section>
-      <!-- <section id="home">
-        <h1>Mark Martinez</h1>
-        <h2>Software Developer/Musician</h2>
-        <p>
-          Laying down phat algoRHYTHMic beats.
-          Pencil to paper code as DRY as my trashcan lid cymbal.
-        </p>
-      </section> -->
+
+      <nav id="nav-header">
+        <div id="nav-header-left">
+          <h1>lateNightProductions</h1>
+        </div>
+        <ul id="nav-header-right">
+          <li>Home</li>
+          <li>About</li>
+          <li>Technology</li>
+          <li>Music</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
 
       <section id="about">
         <h1>| About |</h1>
