Continue working on Header, About, and Contact Section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="name">
           <h1>Mark Martinez</h1>
           <h2>Software Developer && Musician</h2>
-          <a href="#about">Check it.</a>
+          <a id="check-it" href="#about">Check it.</a>
         </div>
       </section>
 
@@ -31,11 +31,11 @@
           <h1>lateNightProductions</h1>
         </div>
         <ul id="nav-header-right">
-          <li>Home</li>
-          <li>About</li>
-          <li>Technology</li>
-          <li>Music</li>
-          <li>Contact</li>
+          <li>Home |</li>
+          <li>About |</li>
+          <!-- <li>Technology |</li>
+          <li>Music |</li> -->
+          <li>Contact |</li>
         </ul>
       </nav>
 
