Add scrolling featuring when clicking home button, need to implement scrolling for nav bar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="./assets/css/about.css">
     <link rel="stylesheet" href="./assets/css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script type="text/javascript" src="./lib/canvas.js"></script>
+    <script type="text/javascript" src="./lib/scrolling.js"></script>
     <script type="text/javascript" src="./lib/app.js"></script>
+
   </head>
   <body>
 
@@ -22,7 +25,7 @@
         <div id="name">
           <h1>Mark Martinez</h1>
           <h2>Software Developer && Musician</h2>
-          <a id="check-it" href="#about">Check it.</a>
+          <a id="check-it" href="#">Check it.</a>
         </div>
       </section>
 
@@ -31,11 +34,11 @@
           <h1>lateNightProductions</h1>
         </div>
         <ul id="nav-header-right">
-          <li>Home |</li>
-          <li>About |</li>
-          <!-- <li>Technology |</li>
-          <li>Music |</li> -->
-          <li>Contact |</li>
+          <li><a id="home-btn" href="#">Home |</a></li>
+          <li><a id="about-btn" href="#">About |</a></li>
+          <!-- <li><a id="projects-btn" href="#">Projects |</a></li>
+          <li><a id="music-btn" href="#">Music |</a></li> -->
+          <li><a id="contact-btn" href="#">Contact |</a></li>
         </ul>
       </nav>
 
