Adding images and info to projects sections, need to style and then add a css transition on mouse hover

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section id="about">
         <h1>| About |</h1>
         <img id="headshot" src="./assets/images/headshot.jpeg" />
-        <a href="./assets/images/markResumeTech.pdf">View Resume</a>
+        <a id="resume" href="./assets/images/markResumeTech.pdf">View Resume</a>
         <p id="bio">
           After having a successful career as a contracted musician and private
           instructor, I decided I needed a change.  I packed a sandwich and moved
@@ -70,9 +70,34 @@
       <section id="projects">
         <h1>| Projects |</h1>
         <ul id="projects-list">
-          <li><img src="./assets/images/mano.png" /></li>
-          <li><img src="./assets/images/drummin.png" /></li>
-          <li><img src="./assets/images/tomaTodo.png" /></li>
+          <li>
+            <img src="./assets/images/mano.png" />
+            <div id="mano-info">
+              <h3>MANO!MIDINERO?</h3>
+              <p>Javascript, React, Redux, Ruby, Rails, PostgreSQL</p>
+            </div>
+          </li>
+          <li>
+            <img src="./assets/images/drummin.png" />
+            <div id="drummin-info">
+              <h3>drummin'</h3>
+              <p>Javascript, HTML5 Canvas & Audio, EventListeners, CSS</p>
+            </div>
+          </li>
+          <li>
+            <img src="./assets/images/tomaTodo.png" />
+            <div id="toma-info">
+              <h3>tomaTodo</h3>
+              <p>Javascript, XMLHttpRequest, Promise</p>
+            </div>
+          </li>
+          <li>
+            <img src="./assets/images/lateSite.png" />
+            <div id="site-info">
+              <h3>Portfolio Site</h3>
+              <p>Vanilla Javascript, HTML5, Canvas, CSS3, CSS Media Queries & Functions</p>
+            </div>
+          </li>
         </ul>
       </section>
 
