Add some styling to project info, need to finish

--- a/index.html
+++ b/index.html
@@ -72,30 +72,38 @@
         <ul id="projects-list">
           <li>
             <img src="./assets/images/mano.png" />
-            <div id="mano-info">
+            <div id="mano-info" class="left">
               <h3>MANO!MIDINERO?</h3>
-              <p>Javascript, React, Redux, Ruby, Rails, PostgreSQL</p>
+              <p>Javascript, React, Redux, Ruby, Rails, PostgreSQL, jQuery, HTML5, CSS3</p>
+              <p>Full stack, single page application</p>
+              <a href="https://manomidinero.herokuapp.com/">Visit</a>
             </div>
           </li>
           <li>
             <img src="./assets/images/drummin.png" />
-            <div id="drummin-info">
+            <div id="drummin-info" class="right">
               <h3>drummin'</h3>
               <p>Javascript, HTML5 Canvas & Audio, EventListeners, CSS</p>
+              <p>Music game, animation/audio synced</p>
+              <a href="https://manomidinero.herokuapp.com/">Play</a>
             </div>
           </li>
           <li>
             <img src="./assets/images/tomaTodo.png" />
-            <div id="toma-info">
+            <div id="toma-info" class="left">
               <h3>tomaTodo</h3>
               <p>Javascript, XMLHttpRequest, Promise</p>
+              <p>Library to streamline DOM manipulation</p>
+              <a href="https://manomidinero.herokuapp.com/">View</a>
             </div>
           </li>
           <li>
             <img src="./assets/images/lateSite.png" />
-            <div id="site-info">
+            <div id="site-info" class="right">
               <h3>Portfolio Site</h3>
               <p>Vanilla Javascript, HTML5, Canvas, CSS3, CSS Media Queries & Functions</p>
+              <p>Website to showcase projects</p>
+              <p>You are here :)</p>
             </div>
           </li>
         </ul>
