Finish Projects section styling, checkpoint before merging to master, next up is music section, and still need to add styling that is mobile responsive

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <h3>drummin'</h3>
               <p>Javascript, HTML5 Canvas & Audio, EventListeners, CSS</p>
               <p>Music game, animation/audio synced</p>
-              <a href="https://manomidinero.herokuapp.com/">Play</a>
+              <a href="https://mm31415.github.io/drummin/">Play</a>
             </div>
           </li>
           <li>
@@ -94,7 +94,7 @@
               <h3>tomaTodo</h3>
               <p>Javascript, XMLHttpRequest, Promise</p>
               <p>Library to streamline DOM manipulation</p>
-              <a href="https://manomidinero.herokuapp.com/">View</a>
+              <a href="https://github.com/mm31415/tomaTodo">View</a>
             </div>
           </li>
           <li>
@@ -107,6 +107,7 @@
             </div>
           </li>
         </ul>
+        <p id="coming-soon">Music section coming soon!</p>
       </section>
 
       <!-- <section id="music">
@@ -129,8 +130,8 @@
           <a href="https://github.com/mm31415"><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/mark-martinez-62975b124/"><i class="fa fa-linkedin-square"></i></a>
           <a href="https://angel.co/mark-martinez-8?public_profile=1"><i class="fa fa-angellist"></i></a>
-
         </nav>
+        <p id="copyright">&#169; Copyright 2018 lateNightProductions. All Rights Reserved.</p>
       </section>
     </main>
 
