Add changes to contact and about section

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <a id="resume" href="./assets/images/markResumeTech.pdf">View Resume</a>
         <p id="bio">
           After having a successful career as a contracted musician and private
-          instructor, I decided I needed a change.  I packed a sandwich and moved
-          to NYC in pursuit of a career in software development.
+          instructor, I decided I needed a change.  I packed a sandwich and started
+          my pursuit of a career in software development.
         </p>
         <p id="about-quote">
           <span>My Mantra: "Life sucks, you suck, deal with it."</span>
@@ -122,6 +122,7 @@
 
       <section id="contact">
         <h1>| Contact |</h1>
+        <h2>Let's talk <em>tech</em>, <em>success</em>, and <em>innovation</em> !</h2>
         <p id="contact-info">
           <h2>Email: martinez.m31415@gmail.com</h2>
           <h2>Phone: (210)387-1744</h2>
