Add link to projects open in new tab

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <h3>MANO!MIDINERO?</h3>
               <p>Javascript, React, Redux, Ruby, Rails, PostgreSQL, jQuery, HTML5, CSS3</p>
               <p>Full stack, single page application</p>
-              <a href="https://manomidinero.herokuapp.com/">Visit</a>
+              <a href="https://manomidinero.herokuapp.com/" target="_blank">Visit</a>
             </div>
           </li>
           <li>
@@ -85,7 +85,7 @@
               <h3>drummin'</h3>
               <p>Javascript, HTML5 Canvas & Audio, EventListeners, CSS</p>
               <p>Music game, animation/audio synced</p>
-              <a href="https://mm31415.github.io/drummin/">Play</a>
+              <a href="https://mm31415.github.io/drummin/" target="_blank">Play</a>
             </div>
           </li>
           <li>
@@ -94,7 +94,7 @@
               <h3>tomaTodo</h3>
               <p>Javascript, XMLHttpRequest, Promise</p>
               <p>Library to streamline DOM manipulation</p>
-              <a href="https://github.com/mm31415/tomaTodo">View</a>
+              <a href="https://github.com/mm31415/tomaTodo" target="_blank">View</a>
             </div>
           </li>
           <li>
