--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <h1>| Contact |</h1>
         <h2>Let's talk <em>tech</em>, <em>success</em>, and <em>innovation</em> !</h2>
         <p id="contact-info">
-          <h2>Email: martinez.m31415@gmail.com</h2>
+          <h2>Email: martinez.m31415&#64;gmail.com</h2>
           <h2>Phone: (210)387-1744</h2>
         </p>
         <nav id="contact-links">
