Update about me section

--- a/index.html
+++ b/index.html
@@ -50,19 +50,15 @@
         <img id="headshot" src="./assets/images/headshot.jpeg" />
         <a id="resume" href="./assets/images/markResumeTech.pdf">View Resume</a>
         <p id="bio">
-          After having a successful career as a contracted musician and private
-          instructor, I decided I needed a change.  I packed a sandwich and started
-          my pursuit of a career in software development.
-        </p>
-        <p id="about-quote">
-          <span>My Mantra: "Life sucks, you suck, deal with it."</span>
-          <span>Ask me about it.</span>
+          I am a software developer with experience building full stack single
+          page applications.  I am passionate about using technology
+          to create positive ripples in society.
         </p>
         <div id="skills">
           <h2>| Skills |</h2>
           <ul id="skill-list">
-            <li>Frontend: Javascript, React, Redux, jQuery, HTML5, CSS3</li>
-            <li>Backend: Ruby, Rails, PostgreSQL</li>
+            <li>Javascript, React, Redux, jQuery, HTML5, CSS3</li>
+            <li>Ruby, Rails, PostgreSQL</li>
           </ul>
         </div>
       </section>
@@ -107,18 +103,7 @@
             </div>
           </li>
         </ul>
-        <p id="coming-soon">Music section coming soon!</p>
       </section>
-
-      <!-- <section id="music">
-        <h1>Music</h1>
-        <p>
-          I specialize in drum set, latin/world percussion, and concert percussion.
-          I also compose music when I am not wrapped up in practicing.
-
-          Portfolio will be up soon!
-        </p>
-      </section> -->
 
       <section id="contact">
         <h1>| Contact |</h1>
