Update About Me

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
         <img id="headshot" src="./assets/images/headshot.jpeg" />
         <a id="resume" href="./assets/images/markResumeTech.pdf">View Resume</a>
         <p id="bio">
-          I am a software developer with experience building full stack single
-          page applications.  I am passionate about using technology
-          to create positive ripples in society.
+          <span>I am a software developer with experience building full stack single
+          page applications.</span>
+          <span>I am passionate about using technology
+          to create positive ripples in society.</span>
         </p>
         <div id="skills">
           <h2>| Skills |</h2>
